--- a/client-app/package.json
+++ b/client-app/package.json
@@ -17,7 +17,9 @@
     "mobx": "^5.15.0",
     "mobx-react-lite": "^1.5.0",
     "react": "^16.11.0",
+    "react-cropper": "^1.3.0",
     "react-dom": "^16.11.0",
+    "react-dropzone": "^10.2.1",
     "react-final-form": "^6.3.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
